[package]
name = "pallet-ssvm"
version = "0.0.1"
authors = ["Second State"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/second-state/pallet-ssvm"
description = "Substrate SSVM pallet"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
primitive-types = { version = "0.7.3", default-features = false, features = ["rlp"] }
rlp = { version = "0.4", default-features = false }
sha2 = { version = "0.8", default-features = false }
sha3 = { version = "0.8", default-features = false }
ssvm = { optional = true, package = "rust-ssvm", git = "https://github.com/second-state/rust-ssvm", tag = "v0.0.1" }
hex = "^0.4"
lazy_static = { version = "1.4.0" }
rustc-hex = { version = "2.1.0", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"sha2/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"pallet-timestamp/std",
	"ssvm",
]
