[package]
name = "pallet-ssvm"
version = "0.2.0-rc1"
authors = ["Second State"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/second-state/pallet-ssvm"
description = "Substrate SSVM pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.105", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp"] }
rlp = { version = "0.5", default-features = false }
sha2 = { version = "0.8.0", default-features = false }
sha3 = { version = "0.8.0", default-features = false }
ssvm = { optional = true, version = "0.1.0-rc2", package = "rust-ssvm" }
rustc-hex = { version = "2.1.0", default-features = false }
lazy_static = { version ="1.4.0"}
# [FIXME] bitvec issue (https://github.com/bitvecto-rs/bitvec/issues/105)
funty = "=1.1.0"

[features]
default = ["std"]
std = [
	"rustc-hex/std",
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"sha2/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"pallet-timestamp/std",
	"ssvm",
]
